2012-10-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.15
        * inst/NEWS: Release 0.9.15
        * inst/include/Rcpp/config.h: Release 0.9.15
        * debian/*: Similarly updated for new release to Debian

2012-10-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Additional PROTECT for parsing exception
	messages before returning them to R, from a suggestion by Ben North

2012-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Date.R: Added a few more tests

2012-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: Dates are now represented as doubles,
	also added accessor functions for double and retained int

	* src/Date.cpp: Convert from SEXP to double, added constructor from
	double and added checks for 'finite' representation before converting
	to 'struct tm' adding support for NA, NaN and Inf

	* src/DateVector.cpp: Instantiate Date types as double

	* src/Datetime.cpp: Also added support for NA, NaN and Inf values

	* inst/unitTests/runit.Date.R: A few additional tests

2012-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Applied patch by Martin Morgan which untangles
	the clang includes driven by version, and uses direct tests for
	presence of the header file
	* inst/include/RcppCommon.h: No longer define CLANG version meta
	variables as we can directly include the relevant header

2012-09-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.14
        * inst/NEWS: Release 0.9.14
        * inst/include/Rcpp/config.h: Release 0.9.14
        * debian/*: Similarly updated for new release to Debian

2012-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.sugarOps.R: More sugar Ops unit tests

2012-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.sugarOps.R: (Incomplete) beginnings of new
	unit test file for sugar operations on vectors and matrices
