@@ -2,7 +2,7 @@
 //
 // Module.h: Rcpp R/C++ interface class library -- Rcpp modules
 //
-// Copyright (C) 2010 - 2011 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2012 Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -36,6 +36,15 @@ namespace Rcpp{
         operator T*(){ return ptr ; }
     private:
         T* ptr;
+    } ;
+    
+    template <typename T>
+    class object {
+    public:
+        typedef T object_type ;
+        object( T* ptr_ ) : ptr(ptr_){}
+        operator T*(){ return ptr ; }
+        T* ptr ;
     } ;
 
     namespace internal {
