@@ -1,3 +1,10 @@
+2012-10-21  Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/traits/wrap_type_traits.h: support for wrapping module objects
+        * include/Rcpp/internal/wrap.h : idem
+        * include/Rcpp/Module.h: idem
+        
+
 2012-10-13  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.9.15
